--- a/src/package.json
+++ b/src/package.json
@@ -12,7 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "koa": "^2.5.2",
-    "koa-body": "^4.0.4"
+    "koa-body": "^4.0.4",
+    "koa-router": "^7.4.0"
   },
   "devDependencies": {
     "mocha": "^5.2.0",
